Navmenu collapse on Click bug fixed

--- a/src/components/navmenu/navmenu.scss
+++ b/src/components/navmenu/navmenu.scss
@@ -1,7 +1,7 @@
 @import '../../sass/variables';
 
 .navmenu {
-    font-size: 2rem;
+    //font-size: 2rem;
     &_link {
         color: $light !important;
         text-decoration: none;
